feat: 차량 도메인 전체 구현 (차량 등록/수정/삭제/조회 API 구현)/(API-038~043)